test/bad/nullables/op09.px

[Bool]? b
b?[0] = true
